<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_plan_lekcji"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jakubkorsak.puszkin.PlanLekcji">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Plan Lekcji"
        app:titleTextColor="@color/white" />


    <LinearLayout
        android:id="@+id/l"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/horiz"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/klasa1"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="1"
                        android:text="@string/_1a" />

                    <Button
                        android:id="@+id/klasa7"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="7"
                        android:text="@string/_2a" />

                    <Button
                        android:id="@+id/klasa13"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="13"
                        android:text="@string/_3a" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/klasa2"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="2"
                        android:text="@string/_1b" />

                    <Button
                        android:id="@+id/klasa8"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:tag="8"
                        android:text="@string/_2b" />

                    <Button
                        android:id="@+id/klasa14"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="14"
                        android:text="@string/_3b" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/klasa3"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="3"
                        android:text="@string/_1c" />

                    <Button
                        android:id="@+id/klasa9"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:tag="9"
                        android:text="@string/_2c" />

                    <Button
                        android:id="@+id/klasa15"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="15"
                        android:text="@string/_3c" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/klasa4"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="4"
                        android:text="@string/_1d" />

                    <Button
                        android:id="@+id/klasa10"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:tag="10"
                        android:text="@string/_2d" />

                    <Button
                        android:id="@+id/klasa16"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="16"
                        android:text="@string/_3d" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/klasa5"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="5"
                        android:text="@string/_1e" />

                    <Button
                        android:id="@+id/klasa11"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:tag="11"
                        android:text="@string/_2e" />

                    <Button
                        android:id="@+id/klasa17"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="17"
                        android:text="@string/_3e" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/klasa6"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="6"
                        android:text="@string/_1f" />

                    <Button
                        android:id="@+id/klasa12"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:tag="12"
                        android:text="@string/_2f" />

                    <Button
                        android:id="@+id/klasa18"
                        android:textColor="@color/colorPrimary"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tag="18"
                        android:text="@string/_3f" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/horiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Nauczyciele"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/nauczyciele"
            android:layout_marginStart="10dp"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/gabinety"
            android:textColor="@color/colorPrimary"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:paddingRight="10dp"
            android:text="@string/gabinety"
            android:layout_marginEnd="10dp"
            android:paddingEnd="10dp" />
    </LinearLayout>


</RelativeLayout>
