<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jakubkorsak.puszkin.Settings">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="Ustawienia" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="56dp">

        <Button
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:text="@string/info" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:id="@+id/buttons_layout_1">

            <Button
                android:id="@+id/delete_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usun_wszystkie_zapisane"
                android:layout_weight="1" />

            <Button
                android:text="@string/pokaz_zapisane"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/show_saved_files"
                android:layout_weight="1" />
        </LinearLayout>


        <TextView
            android:id="@+id/twoja_klasa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText"
            android:layout_below="@+id/buttons_layout_1"
            android:paddingTop="20dp"
            android:text="@string/twoja_klasa" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/twoja_klasa"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/zapis_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText"
            android:layout_toEndOf="@+id/editText"
            android:layout_toRightOf="@+id/editText"
            android:text="@string/zapis" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/design_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:behavior_hideable="true"
        app:behavior_peekHeight="50dp"
        app:elevation="4dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:textAlignment="gravity">

        <TextView
            android:id="@+id/bottomsheet_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/zapisane_pliki"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
